@@ -1,5 +1,5 @@
 /*
- * "$Id: printers.c,v 1.93.2.47 2003/04/16 20:32:45 mike Exp $"
+ * "$Id: printers.c,v 1.93.2.48 2003/04/25 15:30:26 mike Exp $"
  *
  *   Printer routines for the Common UNIX Printing System (CUPS).
  *
@@ -375,7 +375,7 @@ DeletePrinter(printer_t *p)	/* I - Printer to delete */
   * Stop printing on this printer...
   */
 
-  StopPrinter(p);
+  StopPrinter(p, 1);
 
  /*
   * Remove the dummy interface/icon/option files under IRIX...
@@ -856,7 +856,7 @@ SaveAllPrinters(void)
   */
 
   curtime = time(NULL);
-  curdate = gmtime(&curtime);
+  curdate = localtime(&curtime);
   strftime(temp, sizeof(temp) - 1, CUPS_STRFTIME_FORMAT, curdate);
 
   cupsFilePuts(fp, "# Printer configuration file for " CUPS_SVERSION "\n");
@@ -1749,7 +1749,8 @@ SetPrinterReasons(printer_t  *p,	/* I - Printer */
 
 void
 SetPrinterState(printer_t    *p,	/* I - Printer to change */
-                ipp_pstate_t s)		/* I - New state */
+                ipp_pstate_t s,		/* I - New state */
+		int          update)	/* I - Update printers.conf? */
 {
   ipp_pstate_t	old_state;		/* Old printer state */
 
@@ -1785,7 +1786,8 @@ SetPrinterState(printer_t    *p,	/* I - Printer to change */
   * to stopped (or visa-versa)...
   */
 
-  if ((old_state == IPP_PRINTER_STOPPED) != (s == IPP_PRINTER_STOPPED))
+  if ((old_state == IPP_PRINTER_STOPPED) != (s == IPP_PRINTER_STOPPED) &&
+      update)
   {
     if (p->type & CUPS_PRINTER_CLASS)
       SaveAllClasses();
@@ -1854,16 +1856,17 @@ SortPrinters(void)
  */
 
 void
-StopPrinter(printer_t *p)	/* I - Printer to stop */
+StopPrinter(printer_t *p,		/* I - Printer to stop */
+            int       update)		/* I - Update printers.conf? */
 {
-  job_t	*job;			/* Active print job */
+  job_t	*job;				/* Active print job */
 
 
  /*
   * Set the printer state...
   */
 
-  SetPrinterState(p, IPP_PRINTER_STOPPED);
+  SetPrinterState(p, IPP_PRINTER_STOPPED, update);
 
  /*
   * See if we have a job printing on this printer...
@@ -2385,5 +2388,5 @@ write_irix_state(printer_t *p)		/* I - Printer to update */
 
 
 /*
- * End of "$Id: printers.c,v 1.93.2.47 2003/04/16 20:32:45 mike Exp $".
+ * End of "$Id: printers.c,v 1.93.2.48 2003/04/25 15:30:26 mike Exp $".
  */
